<resources>
    <string name="app_name">Aplicacio</string>
    <string name="imageText">Vols Utilitzar aquesta imatge per a la segmentació?</string>
    <string name="Cancel">Cancel·lar</string>
    <string name="Confirm">Confirmar</string>
    <string name="clear_canvas">Clear Canvas</string>
    <string name="dadesPersonals">Dades Personals</string>
    <string name="Patient">Patient XXXX</string>
    <string name="Age">Edat:</string>
    <string name="Gender">Sexe:</string>
    <string name="region_data">Dades de la Ferida</string>
    <string name="region">Regio de la Ferida:</string>
    <string name="perimeter">Perimetre de la Ferida:</string>
    <string name="bruise_necro">Perimetre de la regió necrotica:</string>
    <string name="bruise_grain">Perimetre regió granulosa:</string>
    <string name="bruise_inf">Perimetre regió infectada:</string>
    <string name="images">Images</string>
    <string name="Repeat">Vols repetir alguna?</string>
    <string name="existing">Pacient Existent</string>
    <string name="necrotic">Necrotica</string>
    <string name="grain">Granulosa</string>
    <string name="infected">Infectada</string>
    <string name="segmentation">Segmentar Foto Existent</string>
    <string name="foto">Fer una Foto</string>
    <string name="dades">Dades de Pacients</string>
    <string name="HomeFragment">Home Fragment</string>
    <string name="ImageFragment">Image</string>
    <string name="UserFragment">User</string>
    <string name="ResultFragment">Result</string>
    <string name="CanvasFragment">Canvas</string>
    <string name="UserDataFragment">User Data</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BruiseInfo">Informació de la Ferida</string>
    <string name="age">Data Naixement</string>
    <string name="gender">Sexe</string>
    <string name="regio">Regió</string>
    <string name="descripci_ferida">Descripció Ferida</string>
    <string name="DoB">Data Naixement:</string>
    <string name="DoB_placeholder">Date Placeholder</string>
    <string name="nhc">NHC</string>
    <string name="nhc_placeholder">NHC Placeholder</string>
    <string name="bruise_region">Bruise Region</string>
    <string name="escala_emina">Escala EMINA</string>
    <string name="escala_barthel">Escala Barthel</string>
    <string name="mental_Status">Estat Mental</string>
    <string name="activitat">Activitat</string>
    <string name="nutricio">Nutricio</string>
    <string name="movilitat">Movilitat</string>
    <string name="incontinencia">Incontinencia</string>
    <string name="menjar">Menjar</string>
    <string name="rentar_se_bany">Rentar-se (Bany)</string>
    <string name="vestir_se">Vestir-se</string>
    <string name="arreglar_se">Arreglar-se</string>
    <string name="deposici">Deposició</string>
    <string name="micci">Micció</string>
    <string name="anar_al_labavo">Anar al Labavo</string>
    <string name="traslladar_se">Traslladar-se</string>
    <string name="deambulaci">Deambulació</string>
    <string name="pujar_baixar_escales">Utilitzar Escales</string>
    <string name="nom_pacient">Nom Pacient</string>
    <string name="nhc_View">NHC</string>
    <string name="patologies">Patologies</string>
    <string name="informaci_pacients">Informació Pacients</string>
    <string name="tractament">Tractament</string>
    <string name="patologies_del_pacient">Patologies del Pacient</string>
    <string name="nom">Nom</string>
    <string name="regio_de_la_ferida">Regio de la Ferida</string>
    <string name="tractamentInput">Tractament</string>
    <string name="numero_historial_clinic">Numero Historial Clinic</string>
    <string name="numero_historial">Numero Historial</string>
    <string name="escala_barthel_text">Escala BARTHEL</string>
    <string name="resultat">Resultat</string>
    <string name="data_naixement">Data Naixement</string>
    <string name="confirm">Confirm</string>
    <string name="register">Register</string>
    <string name="confirmar">confirmar</string>
    <string name="login">Login</string>

    <string-array name="CanvasMode">
        <item>Necrotica</item>
        <item>Granulosa</item>
        <item>Infectada</item>
    </string-array>
    <string-array name="Genders">
        <item>Home</item>
        <item>Dona</item>
        <item>Altres</item>
    </string-array>
    <string-array name="Estat_mental">
        <item>Orientat</item>
        <item>Desorientat</item>
        <item>Letargic</item>
        <item>Comatos</item>
    </string-array>
    <string-array name="Movilitat">
        <item>Completa</item>
        <item>Lleugera limitació</item>
        <item>Limitació Important</item>
        <item>Inmòbil</item>
    </string-array>
    <string-array name="Incontinencia">
        <item>No</item>
        <item>Ocasional</item>
        <item>Habitual</item>
        <item>Freqüent</item>
    </string-array>
    <string-array name="Nutrició">
        <item>Correcta</item>
        <item>Ocasional</item>
        <item>Incompleta</item>
        <item>No ingesta</item>
    </string-array>
    <string-array name="Activitat">
        <item>Deambula</item>
        <item>Amb ajuda</item>
        <item>Sempre amb Ajuda</item>
        <item>No deambula</item>
    </string-array>
    <string-array name="Barthel_2_option">
        <item>Independent</item>
        <item>Dependent</item>
    </string-array>
    <string-array name="Barthel_3_option">
        <item>Independent</item>
        <item>Necessita Ajuda</item>
        <item>Dependent</item>
    </string-array>
    <string-array name="Barthel_3_option_2">
        <item>Continent</item>
        <item>Accidents ocasionals</item>
        <item>Incontinent</item>
    </string-array>
    <string-array name="Barthel_4_option_1">
        <item>Independent</item>
        <item>Minima ajuda</item>
        <item>Gran ajuda</item>
        <item>Dependent</item>
    </string-array>
    <string-array name="Barthel_4_option_2">
        <item>Independent</item>
        <item>Necessita Ajuda</item>
        <item>Cadira de Rodes</item>
        <item>Dependent</item>
    </string-array>
</resources>