<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewModel.HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="319dp"
        android:layout_height="328dp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="62dp"
        tools:src="@tools:sample/backgrounds/scenic"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="231dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/Button_Green"
        android:text="@string/segmentation"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="426dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="231dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/Button_Green"
        android:text="@string/foto"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="510dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="231dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/Button_Green"
        android:text="@string/dades"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="600dp" />
</androidx.constraintlayout.widget.ConstraintLayout>