<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewModel.HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="319dp"
        android:layout_height="328dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:src="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/button1"
        android:layout_width="231dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/Button_Green"
        android:text="@string/segmentation"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="231dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/Button_Green"
        android:text="@string/foto"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="231dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/Button_Green"
        android:text="@string/dades"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>